chore: Refactorizar formulario de inicio de sesión, agregar validación de campos y añadir dependencias de axios, react-hook-form y zustand

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <main id="root" class="min-h-dvh flex"></main>
+    <main id="root" class="min-h-dvh"></main>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
