--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CERNIM</title>
   </head>
   <body>
-    <main id="root" class="min-h-dvh"></main>
+    <main id="root"></main>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
